# mitral-regurgitation-hemodynamics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: compliance_sweep.py  eroa_sweep.py
src/: __init__.py
src/fitting/: __init__.py  identifiability.py  optimizer.py
src/model/: __init__.py  chambers.py  constants.py  heart.py  parameters.py  valves.py
src/simulation/: __init__.py  hemodynamics.py  solver.py
tests/: test_fitting.py  test_model.py  test_simulation.py
