[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mitral-regurgitation-hemodynamics"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout", "ruff"]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E702", "E401", "F401", "I001", "E501"]
